feat(source): improve docs & fix server storage
