# src/routers/auth/index.js
@@ -1,26 +1,40 @@
 const express = require('express');
 const jwt = require('jsonwebtoken');
+const log4js = require('log4js');
 
+const { NotAuthorizedError } = require('../../common/errors');
 const { usersStorage } = require('../../store/users');
 const { JWT_PASSWORD } = require('../../common/constants');
 
 const authRouter = express.Router();
+
+const log = log4js.getLogger('authRouter');
+
+log.level = 'debug';
 
 // Login
 authRouter.post('/login', (req, res) => {
   const { email, password } = req.body;
 
   try {
-    console.log('req.body', req.body);
+    log.debug('Login request body=', req.body);
+
     if (!email) {
-      throw new Error('Wrong credentials');
+      throw new NotAuthorizedError('Wrong credentials');
     }
 
-    const user = usersStorage.findByFilter(email);
-    console.log('user', user);
+    const users = usersStorage.findByFilter(email, true);
+
+    log.debug('Stored users=', users);
+
+    if (users.length !== 1) {
+      throw new NotAuthorizedError('Wrong credentials');
+    }
+
+    const [user] = users;
 
     if (user.password !== password) {
-      throw new Error('Wrong credentials');
+      throw new NotAuthorizedError('Wrong credentials');
     }
 
     const accessToken = jwt.sign({ email: user.email }, JWT_PASSWORD, {
@@ -35,7 +49,7 @@ authRouter.post('/login', (req, res) => {
       },
     });
   } catch (error) {
-    res.status(401).json({
+    res.status(error.code || 401).json({
       status: 'error',
       data: {
         message: error.message || 'Internal error',
